# QOV

./: .gitignore  CMakeLists.txt  LICENSE  QOV.h  README.md  grid  test.cpp
decode/: CMakeCache.txt  CMakeLists.txt  MakeFile  Makefile  cmake_install.cmake  decode  decode.cpp  readOut.cpp
encode/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  encode  encode.cpp
