cmake_minimum_required(VERSION 2.8)
project( qov )
find_package( OpenCV REQUIRED )
#add_definitions( -DSMALL_TEST )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( encode.exe ./encode/encode.cpp )
add_executable( decode.exe ./decode/decode.cpp )
add_executable( test.exe test.cpp )
target_link_libraries( encode.exe ${OpenCV_LIBS} )
target_link_libraries( decode.exe ${OpenCV_LIBS} )
target_link_libraries( test.exe ${OpenCV_LIBS} )

