cmake_minimum_required(VERSION 2.8)
project( qov )
find_package( OpenCV REQUIRED )
add_definitions( -DSMALL_TEST )
add_definitions( -DTIME )
add_compile_options(-Wall -Wextra -Wpedantic -O2)
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( encode.exe ./encode/encode.cpp )
add_executable( decode.exe ./decode/decode.cpp )
target_link_libraries( encode.exe ${OpenCV_LIBS} )
target_link_libraries( decode.exe ${OpenCV_LIBS} )

